Changed alert message

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ setInterval(updateValues, 5000);
 function testAlarm() {
     if (isLoggedIn) {
         testbuttonimpulse();
-        alert('Alarm tested!');
+        alert('Testing, Please wait ~10 seconds.');
     } else {
         alert('You need to be logged in.'); 
         
@@ -469,7 +469,7 @@ function testAlarm() {
 function stopAlarm() {
     if (isLoggedIn) {
         stopbuttonimpulse();
-        alert('Alarm stopped!');
+        alert('Stopping Alarm, Please Standby...');
     } else {
         alert('You need to be logged in.');
     }
